--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Me_0</title>
 
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/index.css" />
-  <link rel="stylesheet" href="css/categories.css" />
+  <link rel="stylesheet" href="./public/css/main.css" />
+  <link rel="stylesheet" href="./public/css/index.css" />
+  <link rel="stylesheet" href="./public/css/categories.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Nova+Round&Source+Sans+Pro:wght@400;600&display=swap"
     rel="stylesheet" />
@@ -28,15 +28,15 @@
     <p>Vitor Wunsch</p>
 
     <a target="_blank" href="https://www.linkedin.com/in/vitor-w/" title="Linkedin Profile">
-      <img src="images/Linkedin Logo.svg" alt="Linkedin Profile" />
+      <img src="./public/images/Linkedin Logo.svg" alt="Linkedin Profile" />
     </a>
 
     <a target="_blank" href="https://github.com/vitor-w" title="GitHub Profile">
-      <img src="images/Small GitHub Logo.svg" alt="GitHub Profile" />
+      <img src="./public/images/Small GitHub Logo.svg" alt="GitHub Profile" />
     </a>
 
     <a target="_blank" href="https://app.rocketseat.com.br/me/vitor-w" title="Rocketseat Profile">
-      <img src="images/Rocketseat Logo.svg" alt="Rocketseat Profile" />
+      <img src="./public/images/Rocketseat Logo.svg" alt="Rocketseat Profile" />
     </a>
   </div>
 
@@ -64,7 +64,7 @@
         </div>
 
         <div class="topic" name="Cube Art">
-          <div onclick="location.href='./pages/cube_art.html'">
+          <div onclick="location.href='./public/pages/cube_art.html'">
             <h1>Cube Art</h1>
 
             <p>Art mixed with programming.</p>
@@ -72,7 +72,7 @@
         </div>
 
         <div class="topic" name="Basic_Investment_Site">
-          <div onclick="location.href='./pages/projetoPagina/index.html'">
+          <div onclick="location.href='./public/pages/projetoPagina/index.html'">
             <h1>Basic Investment Site</h1>
 
             <p>Basic site to explore web development.</p>
