--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     </select>
   </div>-->
 
+
+  <div class="about">
+
+    This is a site made to show what I'm studying, projects and for learning</div>
+
   <main class="categories">
     <section class="category" name="Study">
 
