--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="about">
 
-    This is a site made to show what I'm studying, projects and for learning</div>
+    This is a site made to show what I'm studying, projects and for learning.</div>
 
   <main class="categories">
     <section class="category" name="Study">
